[package]
name = "had"
description = "High Availability Dictionary"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/chrgs/had"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "3.2", features = ["derive"] }
